# fusionn-font

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
fusionn_font/: __init__.py  __main__.py  ass_parser.py  ass_writer.py  cli.py  font_subsetter.py
tests/: Stranger Things (2016) - S05E03 - Chapter Three The Turnbow Trap [NF][WEBDL-2160p][EAC3 Atmos 5.1][DV HDR10][h265]-FLUX.chs.srt  Stranger Things (2016) - S05E03 - Chapter Three The Turnbow Trap [NF][WEBDL-2160p][EAC3 Atmos 5.1][DV HDR10][h265]-FLUX.eng.srt  sample.ass
