[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fusionn-font"
version = "0.1.0"
description = "CLI tool to subset fonts based on ASS subtitle file usage"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Maverick" }
]
keywords = ["font", "subset", "ass", "subtitle", "embed", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Fonts",
]
dependencies = [
    "fonttools>=4.47.0",
    "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/maverick/fusionn-font"
Repository = "https://github.com/maverick/fusionn-font"
Issues = "https://github.com/maverick/fusionn-font/issues"

[project.scripts]
fusionn-font = "fusionn_font.cli:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]
